--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-1104054472\testng-customsuite.xml</span>
+                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-975037115\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,42 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyROffersAndDealsPageTest" class="method navigator-link" hash-for-method="verifyOffersAndDealsFlow">verifyOffersAndDealsFlow</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRLoginTest" class="method navigator-link" hash-for-method="clickOnLoginWithoutEnterCreds">clickOnLoginWithoutEnterCreds</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRLoginTest" class="method navigator-link" hash-for-method="invalidUNameInvalidPwd">invalidUNameInvalidPwd</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRLoginTest" class="method navigator-link" hash-for-method="testEmptyPasswordValidUName">testEmptyPasswordValidUName</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRLoginTest" class="method navigator-link" hash-for-method="testEmptyUsernameValidPwd">testEmptyUsernameValidPwd</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRLoginTest" class="method navigator-link" hash-for-method="testInvalidPasswordValidUName">testInvalidPasswordValidUName</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRLoginTest" class="method navigator-link" hash-for-method="testInvalidUsernameValidPwd">testInvalidUsernameValidPwd</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRLoginTest" class="method navigator-link" hash-for-method="verifyFieldAndLogoOnLoginPage">verifyFieldAndLogoOnLoginPage</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRLoginTest" class="method navigator-link" hash-for-method="verifyLoginFunctionality">verifyLoginFunctionality</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +156,63 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">easyr.qa.testCases.EasyROffersAndDealsPageTest</span>
+              <span class="class-name">easyr.qa.testCases.EasyRLoginTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyOffersAndDealsFlow">
-                  </a> <!-- verifyOffersAndDealsFlow -->
-                  <span class="method-name">verifyOffersAndDealsFlow</span>
+                  <a name="clickOnLoginWithoutEnterCreds">
+                  </a> <!-- clickOnLoginWithoutEnterCreds -->
+                  <span class="method-name">clickOnLoginWithoutEnterCreds</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="invalidUNameInvalidPwd">
+                  </a> <!-- invalidUNameInvalidPwd -->
+                  <span class="method-name">invalidUNameInvalidPwd</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testEmptyPasswordValidUName">
+                  </a> <!-- testEmptyPasswordValidUName -->
+                  <span class="method-name">testEmptyPasswordValidUName</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testEmptyUsernameValidPwd">
+                  </a> <!-- testEmptyUsernameValidPwd -->
+                  <span class="method-name">testEmptyUsernameValidPwd</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testInvalidPasswordValidUName">
+                  </a> <!-- testInvalidPasswordValidUName -->
+                  <span class="method-name">testInvalidPasswordValidUName</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testInvalidUsernameValidPwd">
+                  </a> <!-- testInvalidUsernameValidPwd -->
+                  <span class="method-name">testInvalidUsernameValidPwd</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyFieldAndLogoOnLoginPage">
+                  </a> <!-- verifyFieldAndLogoOnLoginPage -->
+                  <span class="method-name">verifyFieldAndLogoOnLoginPage</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyLoginFunctionality">
+                  </a> <!-- verifyLoginFunctionality -->
+                  <span class="method-name">verifyLoginFunctionality</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +220,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-1104054472\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-975037115\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +229,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;easyr.qa.testCases.EasyROffersAndDealsPageTest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;verifyOffersAndDealsFlow&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- easyr.qa.testCases.EasyROffersAndDealsPageTest --&gt;
+      &lt;class name=&quot;easyr.qa.testCases.EasyRLoginTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,16 +269,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyOffersAndDealsFlow')
-data.setCell(0, 2, 'easyr.qa.testCases.EasyROffersAndDealsPageTest')
-data.setCell(0, 3, 24122);
+data.setCell(0, 1, 'verifyLoginFunctionality')
+data.setCell(0, 2, 'easyr.qa.testCases.EasyRLoginTest')
+data.setCell(0, 3, 3860);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testInvalidPasswordValidUName')
+data.setCell(1, 2, 'easyr.qa.testCases.EasyRLoginTest')
+data.setCell(1, 3, 817);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testInvalidUsernameValidPwd')
+data.setCell(2, 2, 'easyr.qa.testCases.EasyRLoginTest')
+data.setCell(2, 3, 531);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'invalidUNameInvalidPwd')
+data.setCell(3, 2, 'easyr.qa.testCases.EasyRLoginTest')
+data.setCell(3, 3, 495);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'clickOnLoginWithoutEnterCreds')
+data.setCell(4, 2, 'easyr.qa.testCases.EasyRLoginTest')
+data.setCell(4, 3, 406);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'testEmptyPasswordValidUName')
+data.setCell(5, 2, 'easyr.qa.testCases.EasyRLoginTest')
+data.setCell(5, 3, 358);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'testEmptyUsernameValidPwd')
+data.setCell(6, 2, 'easyr.qa.testCases.EasyRLoginTest')
+data.setCell(6, 3, 350);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'verifyFieldAndLogoOnLoginPage')
+data.setCell(7, 2, 'easyr.qa.testCases.EasyRLoginTest')
+data.setCell(7, 3, 96);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,18 +332,102 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">easyr.qa.testCases.EasyROffersAndDealsPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">easyr.qa.testCases.EasyRLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyOffersAndDealsFlow</span>
-                <span class="method-start">2306 ms</span>
+                <span class="method-name">verifyFieldAndLogoOnLoginPage</span>
+                <span class="method-start">8529 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">26429 ms</span>
+                <span class="method-start">8629 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">8767 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyLoginFunctionality</span>
+                <span class="method-start">10010 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">13872 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">13996 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testInvalidUsernameValidPwd</span>
+                <span class="method-start">15106 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">15638 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">15742 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testInvalidPasswordValidUName</span>
+                <span class="method-start">16886 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">17703 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">17801 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testEmptyUsernameValidPwd</span>
+                <span class="method-start">19018 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">19369 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">19477 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testEmptyPasswordValidUName</span>
+                <span class="method-start">20613 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">20972 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">21107 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">invalidUNameInvalidPwd</span>
+                <span class="method-start">22386 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">22882 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">22989 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">clickOnLoginWithoutEnterCreds</span>
+                <span class="method-start">24120 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">24527 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
