Offer and deals test cases are optimized with Test anotations

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--1748712305\testng-customsuite.xml</span>
+                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--36617810\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRVendorPageTest" class="method navigator-link" hash-for-method="verifyUpdateVendorValidations">verifyUpdateVendorValidations</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyROffersAndDealsPageTest" class="method navigator-link" hash-for-method="verifyAllFieldValidationInsubDetails">verifyAllFieldValidationInsubDetails</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">easyr.qa.testCases.EasyRVendorPageTest</span>
+              <span class="class-name">easyr.qa.testCases.EasyROffersAndDealsPageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyUpdateVendorValidations">
-                  </a> <!-- verifyUpdateVendorValidations -->
-                  <span class="method-name">verifyUpdateVendorValidations</span>
+                  <a name="verifyAllFieldValidationInsubDetails">
+                  </a> <!-- verifyAllFieldValidationInsubDetails -->
+                  <span class="method-name">verifyAllFieldValidationInsubDetails</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--1748712305\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--36617810\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;easyr.qa.testCases.EasyRVendorPageTest&quot;&gt;
+      &lt;class name=&quot;easyr.qa.testCases.EasyROffersAndDealsPageTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifyUpdateVendorValidations&quot;/&gt;
+          &lt;include name=&quot;verifyAllFieldValidationInsubDetails&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- easyr.qa.testCases.EasyRVendorPageTest --&gt;
+      &lt;/class&gt; &lt;!-- easyr.qa.testCases.EasyROffersAndDealsPageTest --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyUpdateVendorValidations')
-data.setCell(0, 2, 'easyr.qa.testCases.EasyRVendorPageTest')
-data.setCell(0, 3, 16298);
+data.setCell(0, 1, 'verifyAllFieldValidationInsubDetails')
+data.setCell(0, 2, 'easyr.qa.testCases.EasyROffersAndDealsPageTest')
+data.setCell(0, 3, 11607);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 11 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,91 +213,19 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">40 ignored methods</span>
+            <span class="header-content">4 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">easyr.qa.testCases.EasyRVendorPageTest</span>
+              <span class="ignored-class-name">easyr.qa.testCases.EasyROffersAndDealsPageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifyDisplayedVendorAnalystIcon</span>
+                <span class="ignored-method-name">verifyNavigateToSubDetailsOfOffer</span>
                 <br/>
-                <span class="ignored-method-name">verifyDisplayedVendorQRCodeIcon</span>
+                <span class="ignored-method-name">verifyCreateOfferPage</span>
                 <br/>
-                <span class="ignored-method-name">verifySelectAddressFieldValidation</span>
+                <span class="ignored-method-name">verifyEnterVendorNameAndVerifyDetails</span>
                 <br/>
-                <span class="ignored-method-name">verifyVendorLogoValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyDisplayedVendorEditIcon</span>
-                <br/>
-                <span class="ignored-method-name">verifyDisplayedVendorViewIcon</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorDetailsPageCompanyName</span>
-                <br/>
-                <span class="ignored-method-name">verifyMobileFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyBlankCompanyWebsiteFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyEmailFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">clickOnViewVendorIcon</span>
-                <br/>
-                <span class="ignored-method-name">clickAndVerifyVendorDetailsUserReviews</span>
-                <br/>
-                <span class="ignored-method-name">verifyClickOnUpdateVendorBtn</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorDetailsPageVendorCode</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorCategoryFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyDisplayedDeleteIcon</span>
-                <br/>
-                <span class="ignored-method-name">verifyInvalidCompanyWebsiteFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifySearchTagsFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorDetailsPageVendorName</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorDetailsVendorFeedbackTxt</span>
-                <br/>
-                <span class="ignored-method-name">verifyDisplayedChangePwdIcon</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorProfileValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorDetailsDescInEng</span>
-                <br/>
-                <span class="ignored-method-name">verrifyVendorDetailsVendorReportsTxt</span>
-                <br/>
-                <span class="ignored-method-name">verifyInvalidMobileNoFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyCreatVendor</span>
-                <br/>
-                <span class="ignored-method-name">verifyMobileNoFieldBlankSpaceValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorDetailsDescInArab</span>
-                <br/>
-                <span class="ignored-method-name">veirfyVendorDetailsVendorReportData</span>
-                <br/>
-                <span class="ignored-method-name">verifyCompanyNameFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorDetailsUserReviewsData</span>
-                <br/>
-                <span class="ignored-method-name">verifyDescInDanishFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorDetailsPageVendorEmail</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorDetailsDescInDan</span>
-                <br/>
-                <span class="ignored-method-name">verifyVendorNameValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyDisplayedVendorActiveStatusToggle</span>
-                <br/>
-                <span class="ignored-method-name">verifyInvalidEmailFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyParentVendorFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyDescInArabicFieldValidation</span>
-                <br/>
-                <span class="ignored-method-name">verifyDescInEnglishFieldValidation</span>
+                <span class="ignored-method-name">verifyOffersAndDealsPage</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -309,18 +237,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">easyr.qa.testCases.EasyRVendorPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">easyr.qa.testCases.EasyROffersAndDealsPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyUpdateVendorValidations</span>
-                <span class="method-start">3008 ms</span>
+                <span class="method-name">verifyAllFieldValidationInsubDetails</span>
+                <span class="method-start">3083 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">19308 ms</span>
+                <span class="method-start">14693 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
