--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--2015110087\testng-customsuite.xml</span>
+                    <span>C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-220653328\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRCatchShopPageTest" class="method navigator-link" hash-for-method="verifyVendorSelectionValidation">verifyVendorSelectionValidation</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="easyr.qa.testCases.EasyRCatchShopPageTest" class="method navigator-link" hash-for-method="verifySecondPageWithEnterData">verifySecondPageWithEnterData</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,9 +126,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyVendorSelectionValidation">
-                  </a> <!-- verifyVendorSelectionValidation -->
-                  <span class="method-name">verifyVendorSelectionValidation</span>
+                  <a name="verifySecondPageWithEnterData">
+                  </a> <!-- verifySecondPageWithEnterData -->
+                  <span class="method-name">verifySecondPageWithEnterData</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse--2015110087\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\wcg112\AppData\Local\Temp\testng-eclipse-220653328\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -147,7 +147,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;easyr.qa.testCases.EasyRCatchShopPageTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verifyVendorSelectionValidation&quot;/&gt;
+          &lt;include name=&quot;verifySecondPageWithEnterData&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- easyr.qa.testCases.EasyRCatchShopPageTest --&gt;
     &lt;/classes&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyVendorSelectionValidation')
+data.setCell(0, 1, 'verifySecondPageWithEnterData')
 data.setCell(0, 2, 'easyr.qa.testCases.EasyRCatchShopPageTest')
-data.setCell(0, 3, 6263);
+data.setCell(0, 3, 14408);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,23 +213,33 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">6 ignored methods</span>
+            <span class="header-content">11 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">easyr.qa.testCases.EasyRCatchShopPageTest</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifyCreateProductPageSelectVendor</span>
-                <br/>
-                <span class="ignored-method-name">verifyProductPage</span>
-                <br/>
-                <span class="ignored-method-name">verifyInventoryStoreProduct</span>
-                <br/>
-                <span class="ignored-method-name">verifyCreateProductPage</span>
-                <br/>
                 <span class="ignored-method-name">verifyCreateProductPageEnterVendorName</span>
                 <br/>
                 <span class="ignored-method-name">verifyCreatedProduct</span>
+                <br/>
+                <span class="ignored-method-name">verifySecondPageValidationsInEnglish</span>
+                <br/>
+                <span class="ignored-method-name">verifySecondPageValidationsInDanish</span>
+                <br/>
+                <span class="ignored-method-name">verifySubmitFirstPhase</span>
+                <br/>
+                <span class="ignored-method-name">verifySecondPageValidationsInArabic</span>
+                <br/>
+                <span class="ignored-method-name">verifyCreateProductPage</span>
+                <br/>
+                <span class="ignored-method-name">verifyProductPage</span>
+                <br/>
+                <span class="ignored-method-name">verifyCreateProductPageSelectVendor</span>
+                <br/>
+                <span class="ignored-method-name">verifyInventoryStoreProduct</span>
+                <br/>
+                <span class="ignored-method-name">verifyVendorSelectionValidation</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -247,12 +257,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">verifyVendorSelectionValidation</span>
-                <span class="method-start">2295 ms</span>
+                <span class="method-name">verifySecondPageWithEnterData</span>
+                <span class="method-start">2836 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">8560 ms</span>
+                <span class="method-start">17246 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
